# okstdio

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  MANIFEST.in  README.md  example_server.md  pyproject.toml  test.json
.claude/: CLAUDE.md  settings.local.json
.example/: example_server.py  rpcfast.py  v2.py
.trae/documents/: 依赖注入系统实现计划.md  服务器方法树使用示例.md  服务器方法树功能实现计划.md
.trae/rules/: python-project.md
.trae/skills/python/: AGENTS.md  README.md  SKILL.md  metadata.json
.trae/skills/python-documentation/: SKILL.md
.trae/skills/python/cli/: AGENTS.md  README.md  SKILL.md  metadata.json
.trae/skills/python/cli/rules/: _sections.md  _template.md  cli-respect-no-color.md  (+9 more)
.trae/skills/python/package-management/: AGENTS.md  README.md  SKILL.md  metadata.json
.trae/skills/python/project-system/: AGENTS.md  README.md  SKILL.md  metadata.json
docs/: PUBLISHING.md  guide.md
example/: README.md  api_doc.md  client.py  databases.py  example_server.md  schemas.py  server.py
example/assets/: app.db
src/okstdio/: __init__.py
src/okstdio/client/: __init__.py  application.py  future.py  manager.py
src/okstdio/general/: __init__.py  errors.py  jsonrpc_model.py
src/okstdio/server/: __init__.py  appdoc.py  application.py  dependencies.py  middleware.py  router.py  stream.py
src/okstdio/tui/: __init__.py  app.py  client.py  oktui.scss
src/okstdio/tui/widgets/: __init__.py  method_tree.py  params_editor.py  response_viewer.py
tests/: test_client.py  test_dependency_injection.py  test_io_write.py  test_jsonrpc.py  test_manager.py  test_schema.py  test_server.py
(+26 files in other folders)
