[project]
name = "okstdio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "jianjian", email = "jianjian2048@gmail.com" }
]
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.0,<0.9"]
build-backend = "uv_build"
